--- a/css/style.css
+++ b/css/style.css
@@ -12,37 +12,22 @@ table {
 	background-position: top;
 }
 
-.MobBar {
 
-		visibility: hidden;
-		display: none;
-	}
 		
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 650px) {
 /* Styles */        
 
-                  .topbar {
+                  
 
-                  	   visibility: hidden;
-                  	   display: none;
-                  }
+.HideOnMobile {
 
+            display: none;
+            visibility: hidden;
+}
 
-
-	.MobBar {
-
-		visibility: visible;
-		display: block;
-	}
   
-
-  .DeskBar {
-
-    visibility: hidden;
-
-  }
 
    #gif {
 
@@ -55,6 +40,11 @@ table {
          display: none;
          visibility: hidden;
 }
+
+
+      
+
+
 		
 }
 
@@ -122,9 +112,7 @@ table {
 	width: 100px;
 }
 
-.stars {
-	font-size: .5em;
-}
+
 
 .BootSlider{
 
@@ -146,7 +134,7 @@ table {
 .shadow {
         
         box-shadow: 5px 10px 18px #888888;
-        border-radius: 30px;
+        
         
 
 
@@ -251,5 +239,11 @@ table {
     width:5px;
     height:auto;
     display:inline-block;
+}
+
+.HideOnMobile {
+
+            
+            visibility: visible;
 }
 
