--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
    overflow-x: hidden;
@@ -14,14 +15,24 @@ table {
 	background-position: top;
 }
 
+.mainhead {
 
+    
+       background:no-repeat;
+      background-size:100% 100%;
+  }
 		
 
 /* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 650px) {
+@media only screen and (max-width : 687px) {
 /* Styles */        
 
                   
+.scrollDown {
+              display: none;
+              visibility: hidden;
+}
+
 
 .HideOnMobile {
 
