--- a/css/style.css
+++ b/css/style.css
@@ -313,5 +313,18 @@ table {
 }
 
 
-//svgarrow end
+  .HeroSection {
+  width:100%;
+  height:500px;
+  background: url('../images/heroBack.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
+  margin-top: 73px;
+}
+.HeroSection h5 {
+  color:white;
+  text-shadow:2px 2px #333;
+}
 
